--- a/index.html
+++ b/index.html
@@ -1,38 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="assets/css/nav.css" type="text/css" />
+        <link rel="stylesheet" href="assets/css/carousel.css" type="text/css" />
         <script src="app.js"></script>
         <title>Document</title>
     </head>
     <body>
         <nav>
-            <div class="left-nav">
-                <div id="nav-icon" onclick="toggleNav()">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+            <div class="container-nav">
+                <div class="left-nav">
+                    <div id="nav-icon" onclick="toggleNav()">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <a href="#">Home</a>
                 </div>
-                <a href="index.html">Home</a>
-            </div>
-            <div class="right-nav">
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="side-nav" id="side-nav">
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                <div class="right-nav">
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="side-nav" id="side-nav">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
-
+        <div>
+            <div class="carousel">
+                <ul class="slides">
+                    <input
+                        type="radio"
+                        name="radio-buttons"
+                        id="img-1"
+                        checked
+                    />
+                    <li class="slide-container">
+                        <div class="slide-image">
+                            <img
+                                src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Timisoara_-_Regional_Business_Centre.jpg"
+                            />
+                        </div>
+                        <div class="carousel-controls">
+                            <label for="img-3" class="prev-slide">
+                                <span>&lsaquo;</span>
+                            </label>
+                            <label for="img-2" class="next-slide">
+                                <span>&rsaquo;</span>
+                            </label>
+                        </div>
+                    </li>
+                    <input type="radio" name="radio-buttons" id="img-2" />
+                    <li class="slide-container">
+                        <div class="slide-image">
+                            <img
+                                src="https://content.r9cdn.net/rimg/dimg/db/02/06b291e8-city-14912-171317ad83a.jpg?width=1750&height=1000&xhint=3040&yhint=2553&crop=true"
+                            />
+                        </div>
+                        <div class="carousel-controls">
+                            <label for="img-1" class="prev-slide">
+                                <span>&lsaquo;</span>
+                            </label>
+                            <label for="img-3" class="next-slide">
+                                <span>&rsaquo;</span>
+                            </label>
+                        </div>
+                    </li>
+                    <input type="radio" name="radio-buttons" id="img-3" />
+                    <li class="slide-container">
+                        <div class="slide-image">
+                            <img
+                                src="https://speakzeasy.files.wordpress.com/2015/05/twa_blogpic_timisoara-4415.jpg"
+                            />
+                        </div>
+                        <div class="carousel-controls">
+                            <label for="img-2" class="prev-slide">
+                                <span>&lsaquo;</span>
+                            </label>
+                            <label for="img-1" class="next-slide">
+                                <span>&rsaquo;</span>
+                            </label>
+                        </div>
+                    </li>
+                    <div class="carousel-dots">
+                        <label
+                            for="img-1"
+                            class="carousel-dot"
+                            id="img-dot-1"
+                        ></label>
+                        <label
+                            for="img-2"
+                            class="carousel-dot"
+                            id="img-dot-2"
+                        ></label>
+                        <label
+                            for="img-3"
+                            class="carousel-dot"
+                            id="img-dot-3"
+                        ></label>
+                    </div>
+                </ul>
+            </div>
+        </div>
+        <footer>
+            <span>© 2020&nbsp; Keith Shintaku</span>
+        </footer>
     </body>
-    </html>
+</html>
