add content panel and fix side menu layering

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
         <link rel="stylesheet" href="assets/css/nav.css" type="text/css" />
         <link rel="stylesheet" href="assets/css/carousel.css" type="text/css" />
-        <title>Document</title>
+        <link rel="stylesheet" href="assets/css/content.css" type="text/css" />
+        <title>Showcase</title>
     </head>
     <body>
         <nav>
@@ -37,6 +38,7 @@
                 </div>
             </div>
         </nav>
+        <h1>Showcase your Work!</h1>
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-control left">
@@ -102,6 +104,15 @@
                     <li></li>
                 </ol>
             </div>
+        </div>
+        <div class="container-content">
+            <article>
+                <img src="https://placeimg.com/640/480/nature" alt="">
+                <div class="container-article">
+                    <h3>Article 1</h3>
+                    <p>This is where some text about the article would be place to better explain or showcase something!</p>
+                </div>
+            </article>
         </div>
         <footer>
             <span>© 2020&nbsp; Keith Shintaku</span>
