--- a/about.html
+++ b/about.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <head>
-        <meta charset="UTF-8" />
+    <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
         <link rel="stylesheet" href="assets/css/nav.css" type="text/css" />
         <link rel="stylesheet" href="assets/css/content.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/contact.css" type="text/css" />
-        <title>Contact</title>
+        <link rel="stylesheet" href="assets/css/about.css" type="text/css" />
+        <title>About</title>
 </head>
 <body>
     <nav>
@@ -24,38 +23,28 @@
             </div>
             <div class="right-nav">
                 <ul>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="#" class="active">About</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#" class="active">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="side-nav" id="side-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="#" class="active">About</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#" class="active">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h1>Get in Touch!</h1>
-    <div class="container-contact">
-        <div class="container-contact-info">
-            <a href="mailto:hello">info@yes.com</a>
-            <a href="tel:+0000000000">(000) 000-0000</a>
-            <img src="assets/images/map.png" alt="">
+    <h1>About Me!</h1>
+    <div class="container-about">
+        <div class="container-about-info">
+            <p>I've been working for awhile and I'd love to work with you on whatever project you might have.</p>
         </div>
-        <div class="container-contact-form">
-            <form action="#">
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your Name">
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="Email">
-                <label for="subject">Leave a Message</label>
-        <textarea id="subject" name="subject" placeholder="Type your message here.." style="height:170px"></textarea>
-        <input type="submit" value="Submit">
-            </form>
+        <div class="container-about-deco">
+            <img src="https://source.unsplash.com/category/people" alt="">
         </div>
     </div>
     <footer>
