--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <a href="#">Home</a>
+                    <a href="#" class="active">Home</a>
                 </div>
                 <div class="right-nav">
                     <ul>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -31,7 +31,7 @@
                 <div class="side-nav" id="side-nav">
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
