--- a/index.html
+++ b/index.html
@@ -107,10 +107,13 @@
         </div>
         <div class="container-content">
             <article>
-                <img src="https://placeimg.com/640/480/nature" alt="">
+                <img src="https://placeimg.com/640/480/nature" alt="" />
                 <div class="container-article">
                     <h3>Article 1</h3>
-                    <p>This is where some text about the article would be place to better explain or showcase something!</p>
+                    <p>
+                        This is where some text about the article would be place
+                        to better explain or showcase something!
+                    </p>
                 </div>
             </article>
         </div>
@@ -118,5 +121,6 @@
             <span>© 2020&nbsp; Keith Shintaku</span>
         </footer>
     </body>
-    <script src="app.js"></script>
+    <script src="/assets/scripts/navbar.js"></script>
+    <script src="/assets/scripts/carousel.js"></script>
 </html>
