working on localization

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="assets/css/nav.css" type="text/css" />
         <link rel="stylesheet" href="assets/css/carousel.css" type="text/css" />
         <link rel="stylesheet" href="assets/css/content.css" type="text/css" />
+        <script src="https://kit.fontawesome.com/f03b43d7c4.js" crossorigin="anonymous"></script>
         <title>Showcase</title>
     </head>
     <body>
@@ -26,6 +27,14 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><button id="lang">
+                            <!-- <i class="fas fa-globe"></i> -->
+                            🇺🇸 English
+                        </button>
+                        <div class="lang-content">
+                            <a href="#">🇺🇸  English</a>
+                            <a href="#">🇯🇵  日本語</a>
+                        </div></li>
                     </ul>
                 </div>
                 <div class="side-nav" id="side-nav">
