working on localization settings

--- a/ja/about.html
+++ b/ja/about.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/nav.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/content.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/about.css" type="text/css" />
+        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/nav.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/content.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/about.css" type="text/css" />
         <script
             src="https://kit.fontawesome.com/f03b43d7c4.js"
             crossorigin="anonymous"
         ></script>
-        <title>About</title>
+        <title>アバウト</title>
     </head>
     <body>
         <nav>
@@ -23,21 +23,21 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <a href="index.html">Home</a>
+                    <a href="index.html">ホーム</a>
                 </div>
                 <div class="right-nav">
                     <ul>
-                        <li><a href="#" class="active">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#" class="active">アバウト</a></li>
+                        <li><a href="#">サービス</a></li>
+                        <li><a href="contact.html">コンタック</a></li>
                         <div class="lang-dropdown">
                             <li>
                                 <button id="lang">
                                     <i class="fas fa-globe"></i>
                                 </button>
                                 <div class="lang-content">
-                                    <a href="#" class="active">English</a>
-                                    <a href="/ja/about.html">日本語</a>
+                                    <a href="../about.html">English</a>
+                                    <a href="#" class="active">日本語</a>
                                 </div>
                             </li>
                         </div>
@@ -45,20 +45,19 @@
                 </div>
                 <div class="side-nav" id="side-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#" class="active">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">ホーム</a></li>
+                        <li><a href="#" class="active">アバウト</a></li>
+                        <li><a href="#">サービス</a></li>
+                        <li><a href="contact.html">コンタック</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <h1>About Me!</h1>
+        <h1>私について!</h1>
         <div class="container-about">
             <div class="container-about-info">
                 <p>
-                    I've been working for awhile and I'd love to work with you
-                    on whatever project you might have.
+                    私はしばらく働いています、そしてあなたが持っているかもしれないどんなプロジェクトでもあなたと一緒に働きたいです。
                 </p>
             </div>
             <div class="container-about-deco">
@@ -69,5 +68,5 @@
             <span>© 2020&nbsp; Keith Shintaku</span>
         </footer>
     </body>
-    <script src="/assets/scripts/navbar.js"></script>
+    <script src="../assets/scripts/navbar.js"></script>
 </html>
