--- a/ja/contact.html
+++ b/ja/contact.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/nav.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/content.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/contact.css" type="text/css" />
+        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/nav.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/content.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/contact.css" type="text/css" />
         <script
             src="https://kit.fontawesome.com/f03b43d7c4.js"
             crossorigin="anonymous"
         ></script>
-        <title>Contact</title>
+        <title>コンタック</title>
     </head>
     <body>
         <nav>
@@ -23,21 +23,21 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <a href="index.html">Home</a>
+                    <a href="index.html">ホーム</a>
                 </div>
                 <div class="right-nav">
                     <ul>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#" class="active">Contact</a></li>
+                        <li><a href="about.html">アバウト</a></li>
+                        <li><a href="#">サービス</a></li>
+                        <li><a href="#" class="active">コンタック</a></li>
                         <div class="lang-dropdown">
                             <li>
                                 <button id="lang">
                                     <i class="fas fa-globe"></i>
                                 </button>
                                 <div class="lang-content">
-                                    <a href="#" class="active">English</a>
-                                    <a href="/ja/contact.html">日本語</a>
+                                    <a href="../contact.html">English</a>
+                                    <a href="#" class="active">日本語</a>
                                 </div>
                             </li>
                         </div>
@@ -45,42 +45,42 @@
                 </div>
                 <div class="side-nav" id="side-nav">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#" class="active">Contact</a></li>
+                        <li><a href="index.html">ホーム</a></li>
+                        <li><a href="about.html">アバウト</a></li>
+                        <li><a href="#">サービス</a></li>
+                        <li><a href="#" class="active">コンタック</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <h1>Get in Touch!</h1>
+        <h1>おれに届け!</h1>
         <div class="container-contact">
             <div class="container-contact-info">
                 <a href="mailto:hello">info@yes.com</a>
                 <a href="tel:+0000000000">(000) 000-0000</a>
-                <img src="assets/images/map.png" alt="" />
+                <img src="../assets/images/map.png" alt="" />
             </div>
             <div class="container-contact-form">
                 <form action="#">
-                    <label for="fname">First Name</label>
+                    <label for="fname">名前</label>
                     <input
                         type="text"
                         id="fname"
                         name="firstname"
-                        placeholder="Your Name"
+                        placeholder="名前"
                     />
-                    <label for="email">Email</label>
+                    <label for="email">Eメール</label>
                     <input
                         type="text"
                         id="email"
                         name="email"
-                        placeholder="Email"
+                        placeholder="Eメール"
                     />
-                    <label for="subject">Leave a Message</label>
+                    <label for="subject">メッセージを残す</label>
                     <textarea
                         id="subject"
                         name="subject"
-                        placeholder="Type your message here.."
+                        placeholder="ここに入力"
                         style="height: 170px"
                     ></textarea>
                     <input type="submit" value="Submit" />
@@ -91,5 +91,5 @@
             <span>© 2020&nbsp; Keith Shintaku</span>
         </footer>
     </body>
-    <script src="/assets/scripts/navbar.js"></script>
+    <script src="../assets/scripts/navbar.js"></script>
 </html>
