--- a/ja/index.html
+++ b/ja/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/nav.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/carousel.css" type="text/css" />
-        <link rel="stylesheet" href="assets/css/content.css" type="text/css" />
+        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/nav.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/carousel.css" type="text/css" />
+        <link rel="stylesheet" href="../assets/css/content.css" type="text/css" />
         <script
             src="https://kit.fontawesome.com/f03b43d7c4.js"
             crossorigin="anonymous"
         ></script>
-        <title>Showcase</title>
+        <title>見て</title>
     </head>
     <body>
         <nav>
@@ -23,38 +23,37 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <a href="#" class="active">Home</a>
+                    <a href="#" class="active">ホーム</a>
                 </div>
                 <div class="right-nav">
                     <ul>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html">アバウト</a></li>
+                        <li><a href="#">サービス</a></li>
+                        <li><a href="contact.html">コンタック</a></li>
                         <div class="lang-dropdown">
                             <li>
                                 <button id="lang">
                                     <i class="fas fa-globe"></i>
                                 </button>
-                                
+                                <div class="lang-content">
+                                    <a href="../index.html">English</a>
+                                    <a href="#" class="active">日本語</a>
+                                </div>
                             </li>
-                            <div class="lang-content">
-                                <a href="#" class="active">English</a>
-                                <a href="/ja/index.html">日本語</a>
-                            </div>
                         </div>
                     </ul>
                 </div>
                 <div class="side-nav" id="side-nav">
                     <ul>
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#" class="active">ホーム</a></li>
+                        <li><a href="about.html">アバウト</a></li>
+                        <li><a href="#">サービス</a></li>
+                        <li><a href="contact.html">コンタック</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <h1>Showcase your Work!</h1>
+        <h1>私のもの!</h1>
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-control left">
@@ -72,11 +71,9 @@
                             "
                         >
                             <blockquote>
-                                Do something every day that you don't want to
-                                do. This is the golden rule for acquiring the
-                                habit of doing your duty without pain.
+                                毎日頑張って
                             </blockquote>
-                            <p class="author">Oscar Wilde</p>
+                            <p class="author"></p>
                         </div>
                     </div>
                 </div>
@@ -89,11 +86,9 @@
                             "
                         >
                             <blockquote>
-                                Do something every day that you don't want to
-                                do. This is the golden rule for acquiring the
-                                habit of doing your duty without pain.
+                                あきらめないでよ
                             </blockquote>
-                            <p class="author">Mark Twain</p>
+                            <p class="author"></p>
                         </div>
                     </div>
                 </div>
@@ -106,11 +101,9 @@
                             "
                         >
                             <blockquote>
-                                The worst sin towards our fellow creatures is
-                                not to hate them, but to be indifferent to them.
-                                That's the essence of inhumanity.
+                                少しずつ
                             </blockquote>
-                            <p class="author">George Bernard Shaw</p>
+                            <p class="author"></p>
                         </div>
                     </div>
                 </div>
@@ -125,10 +118,9 @@
             <article>
                 <img src="https://placeimg.com/640/480/nature" alt="" />
                 <div class="container-article">
-                    <h3>Article 1</h3>
+                    <h3>アーティクル 1</h3>
                     <p>
-                        This is where some text about the article would be place
-                        to better explain or showcase something!
+                        これは物語が行くところです
                     </p>
                 </div>
             </article>
@@ -137,6 +129,6 @@
             <span>© 2020&nbsp; Keith Shintaku</span>
         </footer>
     </body>
-    <script src="/assets/scripts/navbar.js"></script>
-    <script src="/assets/scripts/carousel.js"></script>
+    <script src="../assets/scripts/navbar.js"></script>
+    <script src="../assets/scripts/carousel.js"></script>
 </html>
